# thesis-chemcam

./: .gitignore  README.md
baseline/: .env.example  .gitignore  Dockerfile  MOC.ipynb  MOC.py  README.md  agg.ipynb  ccam_remove_outliers.ipynb  ccam_remove_outliers.py  check_filtering.ipynb  correlation.csv  correlation_matrix.csv  docker-compose.yml  ds.ipynb  eval.ipynb  experiment_analysis.ipynb  generate_init_results_table.ipynb  get_cv.ipynb  ica.ipynb  ica_lib.py  ica_results.csv  irf.ipynb  moc.py  more_split_eval.ipynb  norms_testing.ipynb  notes.ipynb  pyproject.toml  reproduction.py  req.frozen.txt  requirements.txt  run_experiments.sh  sepsig.csv  setup.py  split_eval.ipynb  streamlit.py  t-test.ipynb  testing.ipynb  train_test_split.csv  train_test_split.ipynb  train_test_split.py  (+1 more)
baseline/PLS_SM/: config.py  data.py  full_flow.py  inf.ipynb  inference.py  norms.ipynb  outlier_removal.py  reproduction.py  run_eval.ipynb  train.ipynb  train.py  utils.py
baseline/eda/: ccam.ipynb  compare_old_vs_new_test_sets.ipynb  pds.ipynb
baseline/experiment_analysis/: experiment_analysis.ipynb  experiment_analysis2.ipynb  experiment_data_dl.py  experiment_data_utils.py
baseline/experiments/: cnn-svr.ipynb  cnn.ipynb  elastic_net.ipynb  experiment.ipynb  extra_trees.ipynb  final_stacking_ensemble.ipynb  final_stacking_ensemble2.ipynb  final_stacking_ensemble3_svr.ipynb  final_stacking_ensemble4_l101.ipynb  final_stacking_ensemble5_alpha01.ipynb  gbr.ipynb  gpr.ipynb  lasso.ipynb  linreg.ipynb  mad-svr.ipynb  ngb.ipynb  nn.ipynb  one-to-one-plot.ipynb  optuna.ipynb  (+22 more)
(+196 files in other folders)
