[tool.poetry]
name = "libs-oxide-predict"
version = "0.1.0"
description = ""
authors = ["Christian Bager Bach Houmann <christian@bagerbach.com>", "Patrick Frostholm Østergaard", "Ivik Lau Dalgas Hostrup"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
mlflow = "^2.10.2"
numpy = "^1.26.4"
pandas = "^2.2.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"
torch = "^2.2.0"
torchvision = "^0.17.0"
torchaudio = "^2.2.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
